--- a/README.textile
+++ b/README.textile
@@ -1,15 +1,17 @@
-h1. Warning. unstable
+h1. unstable
 
 h1. Show current indexing documents in Elasticsearch
 
 
 h2. Compatibility
+
 The following table shows the compatible versions of Elasticsearch and Top Plugin.
 |_. Top Plugin |_.  Elasticsearch   |_. URL  |
 | master                          | 1.7.x  | https://dl.dropboxusercontent.com/u/1003531/top-plugin-1.0-SNAPSHOT.zip  |
 
 
 h2. Installation before 2.0
+
 <pre>
 bin/plugin -install top-plugin -url https://dl.dropboxusercontent.com/u/1003531/top-plugin-1.0-SNAPSHOT.zip
 </pre>
